--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,36 @@
+
+/* Asterisk wildcard selector to override default styles added by the browswer */
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+}
+
+/* header */ 
 header {
     background-color: lightcoral;
 }
 
+/*main */
 main {
     background-color: lightblue;
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+
 }
 
+/*footer*/
 footer {
     background-color: orange;
 }
