--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
 /* Google fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&family=Kanit:ital,wght@0,300;1,100&display=swap');
 
 /* Asterisk wildcard selector to override default styles added by the browswer */
 
@@ -24,6 +24,10 @@ body {
 /* header */ 
 header {
     background-color: lightcoral;
+}
+
+h1 {
+    font-family: 'Inter', sans-serif;
 }
 
 /*main */
